--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 
-/* Your CSS Code here. 
 .holder{
 	width:100vw;
 	height:100vh;
 	display:flex;
-	justify-content:cener;
+	justify-content:center;
 	align-items:center;
 }
 .item-1{
